@@ -4,6 +4,7 @@ import java.time.Instant;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashSet;
+import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -36,7 +37,7 @@ public class UUser {
     private String passwordHash; // stored as algorithm[:saltBase64]:hashBase64
 
     // Kommaseparierte Liste von Rollen-Namen (Enum.name())
-    private String roles; // z.B. "USER,ADMIN"
+    private List<String> roles; // z.B. "USER,ADMIN"
 
     private boolean enabled = true;
 
@@ -49,27 +50,49 @@ public class UUser {
 
     // Rollen-Hilfsmethoden
     public Set<UniverseRoles> getRoles() {
-        if (roles == null || roles.isBlank()) return Collections.emptySet();
-        return Arrays.stream(roles.split(","))
+        if (roles == null || roles.isEmpty()) return Collections.emptySet();
+        return roles.stream()
             .map(String::trim)
             .filter(s -> !s.isEmpty())
             .map(UniverseRoles::valueOf)
             .collect(Collectors.toCollection(LinkedHashSet::new));
     }
     public void setRoles(Set<UniverseRoles> rolesSet) {
-        if (rolesSet == null || rolesSet.isEmpty()) this.roles = null; else this.roles = rolesSet.stream().map(Enum::name).distinct().collect(Collectors.joining(","));
+        if (rolesSet == null || rolesSet.isEmpty()) this.roles = null;
+        else this.roles = rolesSet.stream().map(Enum::name).distinct().collect(Collectors.toList());
     }
     public void setRoles(UniverseRoles... rolesArray) {
-        if (rolesArray == null || rolesArray.length == 0) { this.roles = null; } else { Set<UniverseRoles> set = Arrays.stream(rolesArray).collect(Collectors.toCollection(LinkedHashSet::new)); setRoles(set); }
+        if (rolesArray == null || rolesArray.length == 0) { this.roles = null; }
+        else { Set<UniverseRoles> set = Arrays.stream(rolesArray).collect(Collectors.toCollection(LinkedHashSet::new)); setRoles(set); }
     }
     public boolean addRole(UniverseRoles role) {
-        if (role == null) return false; Set<UniverseRoles> current = new LinkedHashSet<>(getRoles()); boolean added = current.add(role); if (added) setRoles(current); return added;
+        if (role == null) return false;
+        Set<UniverseRoles> current = new LinkedHashSet<>(getRoles());
+        boolean added = current.add(role);
+        if (added) setRoles(current);
+        return added;
     }
     public boolean removeRole(UniverseRoles role) {
-        if (role == null) return false; Set<UniverseRoles> current = new LinkedHashSet<>(getRoles()); boolean removed = current.remove(role); if (removed) setRoles(current); return removed;
+        if (role == null) return false;
+        Set<UniverseRoles> current = new LinkedHashSet<>(getRoles());
+        boolean removed = current.remove(role);
+        if (removed) setRoles(current);
+        return removed;
     }
     public boolean hasRole(UniverseRoles role) { return role != null && getRoles().contains(role); }
-    public String getRolesRaw() { return roles; }
-    public void setRolesRaw(String rolesRaw) { this.roles = (rolesRaw == null || rolesRaw.isBlank()) ? null : rolesRaw.trim(); }
+    public String getRolesAsString() {
+        if (roles == null || roles.isEmpty()) return "";
+        return String.join(",", roles);
+    }
+    public void setRolesStringList(String rolesRaw) {
+        if (rolesRaw == null || rolesRaw.trim().isEmpty()) {
+            this.roles = null;
+        } else {
+            this.roles = Arrays.stream(rolesRaw.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toList());
+        }
+    }
 
 }
